# ustc-compiler-2025-kendrick

./: CMakeLists.txt  README.md
include/common/: ast.hpp  logging.hpp  syntax_tree.h
include/lightir/: BasicBlock.hpp  Function.hpp  IRBuilder.hpp  Instruction.hpp
src/: CMakeLists.txt
src/cminusfc/: main.cpp
src/common/: ast.cpp
src/lightir/: BasicBlock.cpp  Function.cpp  Instruction.cpp
src/parser/: lexical_analyzer.l  syntax_analyzer.y
tests/2-ir-gen/autogen/: eval_lab2.py
tests/2-ir-gen/autogen/testcases/lv2/: alloca_in_loop.cminus
tests/2-ir-gen/warmup/c_cases/: global.c  global.ll
tests/2-ir-gen/warmup/stu_cpp/: assign_generator.cpp  fun_generator.cpp  if_generator.cpp  while_generator.cpp
tests/2-ir-gen/warmup/stu_ll/: assign_hand.ll  fun_hand.ll  if_hand.ll  while_hand.ll
tests/2-ir-gen/warmup/ta_gcd/: gcd_array.ll
